# Copyright 2025 Dmytro Yaroshenko (https://github.com/o-murphy)

[build-system]
requires = ["setuptools", "wheel", "tomli; python_version<'3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "wialonblock"
version = "0.1.1"
authors = [
    { name = "o-murphy", email = "thehelixpg@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiogram>=3.20.0.post0",
    "py-aiowialon>=1.3.5",
    "pydantic>=2",
]

[tool.setuptools]
py-modules = ["wialonblock"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wialonblock*"]

[tool.uv]
package = true

[project.scripts]
wialonblock = "wialonblock.__main__:main"
